inputmethod: Show the input method even if it was dismissed

Reset the current context in case we receive a show() event from the
client, meaning that they really want to see that virtual keyboard.

BUG: 466969


(cherry picked from commit d34cf36bfaadd39fcc6893379a0d8d8326031eea)